2012-10-19 Max Baak <mbaak@cern.ch>
	* Updates for root 5.34, minor patches to get this to work.
	* Migration to python 2.6.5
	* Otherwise equivalent to HistFitter-00-00-17
	* Tagging as: HistFitter-00-00-18 

2012-10-19 Max Baak <mbaak@cern.ch>
        * Multiple minor bug-fixes for normalized histograms b/n control and signal regions. 
        * Now achieves numerically identical results wrt HF-13 for 0-lepton fit.
        * Introduction of dedicated logger to stream-line output on screen (by Geert-Jan)
        * Tagging: HistFitter-00-00-17
        * This is the last tag supported for root 5.32
        * Official recommendation is to now use this tag instead of: HistFitter-00-00-13 

2012-10-02 David Cote <david.cote@cern.ch>
	* Multiple bug fixes. Achieves numerically identical results w.r.t. HistFitter-00-00-13-03
	  for normFactor + stat + userNormHistSys. Similar but not identical results for HistoSys and OverallSys.
	* Tagging: HistFitter-00-00-16

2012-09-20 David Cote <david.cote@cern.ch>
	* Work in progress tag to request feedback about recent commits
	* The code runs without known crashes, but gives different results w.r.t.
	  HistFitter-00-00-13 which are not yet understood
	* Tagging: HistFitter-00-00-15

2012-09-04 Max Baak <mbaak@cern.ch>
        * Development tag - *before* migrating in the 0-lepton changes.
        * HistFitter-00-00-14

2012-09-04 David Cote <david.cote@cern.ch>
	* large bunch of code from Tobias Binder to simplify configManager.execute()
	* re-implemented blinding with configManager options 
	  blindSR=True/False, blindCR=True/False and useSignalInBlindedData=True/False

2012-08-28 Max Baak <mbaak@cern.ch>
        * RooStats BUG Fix to _always_ use QTilde in AsymptoticCalculator.
        * HistFitter-00-00-13

2012-06-27 Max Baak <mbaak@cern.ch>
        * Added setup file for using eos at cern: setupeos.sh
        * HistFitter-00-00-12

2012-06-21 Evgeny Khramov <evgeniy.khramov@cern.ch>